--- a/src/Web/LearningPlusWebApp/Views/Home/Partial/_ClassesPartial.cshtml
+++ b/src/Web/LearningPlusWebApp/Views/Home/Partial/_ClassesPartial.cshtml
@@ -9,21 +9,28 @@
         <h3 class="mb-0">Моите уроци</h3>
     </div>
     <div class="border border-success">
-        <ul>
-            @foreach (var course in Model)
-            {
-            <li>
-                <span>@course.DayOfWeek @course.TimeOfDay</span>
-                @if (User.IsInRole("Parent") || User.IsInRole("Child"))
+        @if (Model.Count() == 0)
+        {
+            <h4 class="text-center text-warning mt-3">Нямате уроци</h4>
+        }
+        else
+        {
+            <ul>
+                @foreach (var course in Model)
                 {
-                    <a asp-controller="Homeworks" asp-action="UploadHomework" asp-route-id="@course.Id.ToString()">@course.Discipline</a>
+                    <li>
+                        <span>@course.DayOfWeek @course.TimeOfDay</span>
+                        @if (User.IsInRole("Parent") || User.IsInRole("Child"))
+                        {
+                            <a asp-controller="Homeworks" asp-action="UploadHomework" asp-route-id="@course.Id.ToString()">@course.Discipline</a>
+                        }
+                        else if (User.IsInRole("Teacher"))
+                        {
+                            <a asp-controller="Classes" asp-action="Details" asp-route-id="@course.Id.ToString()">@course.Discipline</a>
+                        }
+                    </li>
                 }
-                else if (User.IsInRole("Teacher"))
-                {
-                    <a asp-controller="Classes" asp-action="Details" asp-route-id="@course.Id.ToString()">@course.Discipline</a>
-                }
-            </li>
-            }
-        </ul>
+            </ul>
+        }
     </div>
 </div>
