--- a/src/Web/LearningPlusWebApp/Views/Home/Partial/_HomeworksPartial.cshtml
+++ b/src/Web/LearningPlusWebApp/Views/Home/Partial/_HomeworksPartial.cshtml
@@ -8,29 +8,36 @@
     <div class="text-center pt-2">
         @if (User.IsInRole("Parent") || User.IsInRole("Child"))
         {
-        <h3 class="mb-0">Моите проверени домашни</h3>
+            <h3 class="mb-0">Моите проверени домашни</h3>
         }
         else if (User.IsInRole("Teacher"))
         {
-        <h3 class="mb-0">Моите домашни за проверка</h3>
+            <h3 class="mb-0">Моите домашни за проверка</h3>
         }
     </div>
     <div class="border border-success">
-        <ul>
-            @foreach (var homework in Model)
-            {
-            <li>
-                <span>@homework.UploadedOn</span>
-                @if (User.IsInRole("Parent") || User.IsInRole("Child"))
+        @if (Model.Count() == 0)
+        {
+            <h4 class="text-center text-warning mt-3">Нямате домашни</h4>
+        }
+        else
+        {
+            <ul>
+                @foreach (var homework in Model)
                 {
-                    <a asp-controller="Homeworks" asp-action="Assessed" asp-route-id="@homework.Id.ToString()">@homework.Student</a>
+                    <li>
+                        <span>@homework.UploadedOn</span>
+                        @if (User.IsInRole("Parent") || User.IsInRole("Child"))
+                        {
+                            <a asp-controller="Homeworks" asp-action="Assessed" asp-route-id="@homework.Id.ToString()">@homework.Student</a>
+                        }
+                        else if (User.IsInRole("Teacher"))
+                        {
+                            <a asp-controller="Homeworks" asp-action="Assessment" asp-route-id="@homework.Id.ToString()">@homework.Student</a>
+                        }
+                    </li>
                 }
-                else if (User.IsInRole("Teacher"))
-                {
-                    <a asp-controller="Homeworks" asp-action="Assessment" asp-route-id="@homework.Id.ToString()">@homework.Student</a>
-                }
-            </li>
-            }
-        </ul>
+            </ul>
+        }
     </div>
 </div>
