--- a/src/Web/LearningPlusWebApp/Views/Home/Partial/_NewsPartial.cshtml
+++ b/src/Web/LearningPlusWebApp/Views/Home/Partial/_NewsPartial.cshtml
@@ -9,18 +9,26 @@
         <h3 class="mb-0">Моите новини</h3>
     </div>
     <div class="border border-success">
-        <div class="holder width-75">
-            <ul id="ticker01">
-                @foreach (var news in Model)
-                {
-                    <li>
-                        <span>@news.CreatedOn.ToString("MM/dd/yyyy hh:mm")</span>
-                        <a asp-controller="News" asp-action="Details" asp-route-id="@news.Id.ToString()"> @news.Message</a>
-                    </li>
-                }
-            </ul>
-        </div>
+        @if (Model.Count() == 0)
+        {
+            <h4 class="text-center text-warning mt-3">Нямате новини</h4>
+        }
+        else
+        {
+            <div class="holder width-75">
+                <ul id="ticker01">
+                    @foreach (var news in Model)
+                    {
+                        <li>
+                            <span>@news.CreatedOn.ToString("MM/dd/yyyy hh:mm")</span>
+                            <a asp-controller="News" asp-action="Details" asp-route-id="@news.Id.ToString()"> @news.Message</a>
+                        </li>
+                    }
+                </ul>
+            </div>
+        }
     </div>
+
     @if (User.IsInRole("Admin") || User.IsInRole("Teacher"))
     {
         <div class="d-flex justify-content-between">
