--- a/src/Web/LearningPlusWebApp/Views/Users/RegisterStudent.cshtml
+++ b/src/Web/LearningPlusWebApp/Views/Users/RegisterStudent.cshtml
@@ -8,7 +8,7 @@
     <link href="~/css/site.css" rel="stylesheet">
 }
 
-<h4 class="text-center">@ViewData["Title"]</h4>
+<h4 class="text-center mt-3">@ViewData["Title"]</h4>
 <hr />
 <div class="container-fluid">
     <form asp-action="RegisterStudent">
