--- a/src/Web/LearningPlusWebApp/Areas/Administrator/Views/Users/RoleControl.cshtml
+++ b/src/Web/LearningPlusWebApp/Areas/Administrator/Views/Users/RoleControl.cshtml
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 }
 
-<h1 class="text-center">@ViewData["Title"]</h1>
+<h1 class="text-center mt-3">@ViewData["Title"]</h1>
 <div id="tabs">
     <ul>
         <li><a href="#tabs-1">Направи Администратор</a></li>
