--- a/src/Web/LearningPlusWebApp/Areas/Teacher/Views/Users/UserApprovals.cshtml
+++ b/src/Web/LearningPlusWebApp/Areas/Teacher/Views/Users/UserApprovals.cshtml
@@ -7,7 +7,7 @@
     <link href="~/css/site.css" rel="stylesheet">
 }
 
-<h1 class="text-center">@ViewData["Title"]</h1>
+<h1 class="text-center mt-3">@ViewData["Title"]</h1>
 <div class="d-flex justify-content-center">
     <div class="half-width">
         <table class="table table-hover mb-0">
