--- a/src/Web/LearningPlusWebApp/Areas/Teacher/Views/Users/UserEdit.cshtml
+++ b/src/Web/LearningPlusWebApp/Areas/Teacher/Views/Users/UserEdit.cshtml
@@ -8,7 +8,7 @@
     <link href="~/css/site.css" rel="stylesheet">
 }
 
-<div class="text-center">
+<div class="text-center mt-3">
     <h2>@ViewData["Title"]</h2>
 </div>
 
