--- a/src/Web/LearningPlusWebApp/Views/Assessment/Markbook.cshtml
+++ b/src/Web/LearningPlusWebApp/Views/Assessment/Markbook.cshtml
@@ -26,7 +26,7 @@
         </tr>
     </thead>
     <tbody>
-        @{if (Model.Assessments != null)
+        @{if (Model.Assessments.Count > 0)
             {
                 var i = 1;
                 foreach (var assesment in Model.Assessments)
@@ -44,7 +44,7 @@
             else
             {
                 <tr class="row">
-                    <td class="col-md-12 text-center">Все още няма нанесени оценки</td>
+                    <td class="col-md-12 text-center text-warning display-4">Все още няма нанесени оценки</td>
                 </tr>
             }
         }
