--- a/src/Web/LearningPlusWebApp/Views/Classes/Create.cshtml
+++ b/src/Web/LearningPlusWebApp/Views/Classes/Create.cshtml
@@ -4,12 +4,16 @@
     ViewData["Title"] = "Запиши час";
 }
 
+@section Head{
+    <link href="~/css/site.css" rel="stylesheet">
+}
+
 <h1 class="text-center">@ViewData["Title"]</h1>
 <hr />
 <div class="row d-flex justify-content-center">
     <div class="col-md-8 text-center">
         <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="DayOfWeek" class="control-label col-md-3 text-left"></label>
                 <select class="col-md-3 text-right" name="dayofweek">
@@ -82,7 +86,7 @@
             <div class="row d-flex justify-content-between mb-3">
                 <div class="col-1"></div>
                 <div class="col-5">
-                    <input type="submit" value="Запиши" class="btn btn-primary" />
+                    <input type="submit" value="Запиши" class="btn logo-btn" />
                 </div>
                 <div class="col-6">
                     <a asp-controller="Classes" asp-action="Schedule">Откажи</a>
@@ -92,5 +96,8 @@
     </div>
 </div>
 
+@section Scripts{
+    <partial name="_ValidationScriptsPartial" />
+}
 
 
