--- a/src/Web/LearningPlusWebApp/Views/Home/Index.cshtml
+++ b/src/Web/LearningPlusWebApp/Views/Home/Index.cshtml
@@ -315,7 +315,7 @@
                         <div class="validation"></div>
                     </div>
                     <div class="form-group">
-                        <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Съобщение..."></textarea>
+                        <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Напишете ни нещо" placeholder="Съобщение..."></textarea>
                         <div class="validation"></div>
                     </div>
                     <div class="text-center"><button type="submit">Изпрати запитване</button></div>
