--- a/src/Web/LearningPlusWebApp/Views/Users/RegisterStudent.cshtml
+++ b/src/Web/LearningPlusWebApp/Views/Users/RegisterStudent.cshtml
@@ -96,7 +96,7 @@
             </div>
         </div>
         <div class="form-group text-center">
-            <input type="submit" value="Create" class="btn logo-btn" />
+            <input type="submit" value="Регистрирай" class="btn logo-btn" />
         </div>
     </form>
 </div>
