--- a/src/Web/LearningPlusWebApp/Views/Shared/_Layout.cshtml
+++ b/src/Web/LearningPlusWebApp/Views/Shared/_Layout.cshtml
@@ -16,15 +16,15 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800|Montserrat:300,400,700" rel="stylesheet">
 
     <!-- Bootstrap CSS File -->
-    <link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    @*<link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">*@
 
     <!-- Libraries CSS Files -->
-    <link href="/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    @*<link href="/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="/lib/animate/animate.min.css" rel="stylesheet">
     <link href="/lib/ionicons/css/ionicons.min.css" rel="stylesheet">
     <link href="/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="/lib/magnific-popup/magnific-popup.css" rel="stylesheet">
-    <link href="/lib/ionicons/css/ionicons.min.css" rel="stylesheet">
+    <link href="/lib/ionicons/css/ionicons.min.css" rel="stylesheet">*@
 
     @RenderSection("Head", false)
 
@@ -73,7 +73,7 @@
 
     <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
-    <!-- JavaScript Libraries -->
+    @*<!-- JavaScript Libraries -->
     <script src="/lib/jquery/jquery.min.js"></script>
     <script src="/lib/jquery/jquery-migrate.min.js"></script>
     <script src="/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -89,7 +89,7 @@
     <script src="/contactform/contactform.js"></script>
 
     <!-- Template Main Javascript File -->
-    <script src="/js/main.js"></script>
+    <script src="/js/main.js"></script>*@
 
     @RenderSection("Scripts", required: false)
 </body>
