--- a/src/Web/LearningPlusWebApp/Views/Home/Index.cshtml
+++ b/src/Web/LearningPlusWebApp/Views/Home/Index.cshtml
@@ -8,13 +8,13 @@
 <!--==========================
     Intro Section
   ============================-->
-<section id="intro">
+<section class="intro">
 
     <div class="intro-content">
         <h2>Направи <span>своя</span><br>успех реалност!</h2>
     </div>
 
-    <div id="intro-carousel" class="owl-carousel">
+    <div class="intro-carousel">
         <div class="item" style="background-image: url('img/intro-carousel/1.jpg');"></div>
         <div class="item" style="background-image: url('img/intro-carousel/2.jpg');"></div>
         <div class="item" style="background-image: url('img/intro-carousel/3.jpg');"></div>
@@ -29,7 +29,7 @@
     <!--==========================
       About Section
     ============================-->
-    <section id="about" class="wow fadeInUp">
+    <section class="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 about-img">
@@ -54,7 +54,7 @@
     <!--==========================
       Services Section
     ============================-->
-    <section id="services">
+    <section class="services">
         <div class="container">
             <div class="section-header">
                 <h2>Обучения</h2>
@@ -107,7 +107,7 @@
     <!--==========================
       Testimonials Section
     ============================-->
-    <section id="testimonials" class="wow fadeInUp">
+    <section class="testimonials">
         <div class="container">
             <div class="section-header">
                 <h2>Препоръки</h2>
@@ -177,7 +177,7 @@
     <!--==========================
       Our Team Section
     ============================-->
-    <section id="team" class="wow fadeInUp">
+    <section class="team">
         <div class="container">
             <div class="section-header">
                 <h2>Нашите преподаватели</h2>
@@ -253,7 +253,7 @@
     <!--==========================
       Contact Section
     ============================-->
-    <section id="contact" class="wow fadeInUp">
+    <section class="contact">
         <div class="container">
             <div class="section-header">
                 <h2>Задайте ни въпрос</h2>
