--- a/src/Web/LearningPlusWebApp/wwwroot/css/site.css
+++ b/src/Web/LearningPlusWebApp/wwwroot/css/site.css
@@ -1,68 +1,17 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification\ 
-for details on configuring this project to bundle and minify static web assets. */
-body {
-    padding-top: 50px;
-    padding-bottom: 20px;
-}
+@import url('variables.css');
 
-/* Wrapping element */
-/* Set some basic padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
-}
+@import url('typography.css');
 
-/* Carousel */
-.carousel-caption p {
-    font-size: 20px;
-    line-height: 1.4;
-}
+@import url('layout.css');
 
-/* Make .svg files in the carousel display properly in older browsers */
-.carousel-inner .item img[src$=".svg"] {
-    width: 100%;
-}
+@import url('styles.css');
 
-/* Makes the required field star red */
-.required:after {
-    content: "*";
-    font-weight: bold;
-    color: red;
-}
+/*@import url('site-header.css');*/
+/*@import url('site-footer.css');*/
 
-.width-90 {
-    width: 90%
-}
+/*@import url('navigation.css');*/
 
-.width-75 {
-    width: 75%
-}
+/* @import url('transtions.css'); */
+/*@import url('animations.css');*/
 
-/* Makes a btn looks like a link */
-#btnaslink {
-    color: #50d8af;
-    transition: 0.5s;
-    background: none;
-    border: none;
-    padding: 0;
-    font: inherit;
-    cursor: pointer;
-    outline: inherit;
-}
-
-.logo-btn {
-    background-color: #50d8af;
-}
-
-/* QR code generator */
-#qrCode {
-    margin: 15px;
-}
-
-/* Hide/rearrange for smaller screens */
-@media screen and (max-width: 767px) {
-    /* Hide captions */
-    .carousel-caption {
-        display: none;
-    }
-}
+/*@import url('gallery.css');*/
