--- a/src/Web/LearningPlusWebApp/Views/Home/Index.cshtml
+++ b/src/Web/LearningPlusWebApp/Views/Home/Index.cshtml
@@ -30,25 +30,19 @@
       About Section
     ============================-->
     <section class="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6 about-img">
-                    <img src="https://www.timeshighereducation.com/sites/default/files/styles/the_breaking_news_image_style/public/istock-499343530.jpg?itok=4ObUNN41" alt="">
-                </div>
+        <div class="img-container">
+            <img src="https://www.timeshighereducation.com/sites/default/files/styles/the_breaking_news_image_style/public/istock-499343530.jpg?itok=4ObUNN41" alt="">
+        </div>
 
-                <div class="col-lg-6 content">
-                    <h2>Образователни услуги</h2>
-                    <h3>Запознаите се с нашите образователни услуги!</h3>
+        <div class="text-container">
+            <h2>Образователни услуги</h2>
+            <h3>Запознаите се с нашите образователни услуги!</h3>
 
-                    <ul>
-                        <li><i class="ion-android-checkmark-circle"></i> Избор на професия.</li>
-                        <li><i class="ion-android-checkmark-circle"></i> Личностно развитие.</li>
-                        <li><i class="ion-android-checkmark-circle"></i> Образователни консултации – справка за специалности, университети, дисциплини за кандидатстване.</li>
-                    </ul>
-
-                </div>
-            </div>
-
+            <ul>
+                <li><i class="ion-android-checkmark-circle"></i> Избор на професия.</li>
+                <li><i class="ion-android-checkmark-circle"></i> Личностно развитие.</li>
+                <li><i class="ion-android-checkmark-circle"></i> Образователни консултации – справка за специалности, университети, дисциплини за кандидатстване.</li>
+            </ul>
         </div>
     </section><!-- #about -->
     <!--==========================
@@ -67,8 +61,10 @@
                     <div class="box wow fadeInLeft">
                         <div class="icon"><i class="fa fa-book"></i></div>
                         <h4 class="title"><a asp-controller="Home" asp-action="BgLangAndLitr">Матура по български език и литература</a></h4>
-                        <p class="description">Матурата по български език е оценка на първата ключова компетентност за 
-                        всеки български (европейски) гражданин.</p>
+                        <p class="description">
+                            Матурата по български език е оценка на първата ключова компетентност за
+                            всеки български (европейски) гражданин.
+                        </p>
                     </div>
                 </div>
 
@@ -76,8 +72,10 @@
                     <div class="box wow fadeInRight">
                         <div class="icon"><i class="fa fa-calculator"></i></div>
                         <h4 class="title"><a asp-controller="Home" asp-action="Math">Кандидатстване с математика</a></h4>
-                        <p class="description">Учебните материали отговарят на формата на изпита – 
-                        писмен изпит по математика, тестови изпит или формат за матура по математика.</p>
+                        <p class="description">
+                            Учебните материали отговарят на формата на изпита –
+                            писмен изпит по математика, тестови изпит или формат за матура по математика.
+                        </p>
                     </div>
                 </div>
 
@@ -85,8 +83,10 @@
                     <div class="box wow fadeInLeft" data-wow-delay="0.2s">
                         <div class="icon"><i class="fa fa-university"></i></div>
                         <h4 class="title"><a asp-controller="Home" asp-action="History">Кандидатстване с история</a></h4>
-                        <p class="description">Разработени подробни теми по история в 3 части за 
-                        кандидатстване в университети и полагане на държавен зрелостен изпит.</p>
+                        <p class="description">
+                            Разработени подробни теми по история в 3 части за
+                            кандидатстване в университети и полагане на държавен зрелостен изпит.
+                        </p>
                     </div>
                 </div>
 
@@ -94,8 +94,10 @@
                     <div class="box wow fadeInRight" data-wow-delay="0.2s">
                         <div class="icon"><i class="fa fa-language"></i></div>
                         <h4 class="title"><a asp-controller="Home" asp-action="English">Матура по английски език</a></h4>
-                        <p class="description">Присъствени едногодишни и двугодишни курсове за подготовка за матура и 
-                        кандидатстване в университет.</p>
+                        <p class="description">
+                            Присъствени едногодишни и двугодишни курсове за подготовка за матура и
+                            кандидатстване в университет.
+                        </p>
                     </div>
                 </div>
 
@@ -103,7 +105,6 @@
 
         </div>
     </section><!-- #services -->
-
     <!--==========================
       Testimonials Section
     ============================-->
@@ -257,9 +258,11 @@
         <div class="container">
             <div class="section-header">
                 <h2>Задайте ни въпрос</h2>
-                <p>Центърът за извън класна подготовка се намира на удобно място в квартал Хладилника 
-                    и за повече информация може да ни зададете въпрос във формата за контакт или на посочените имейл и телефон, 
-                    както и да ни откриете на картата.</p>
+                <p>
+                    Центърът за извън класна подготовка се намира на удобно място в квартал Хладилника
+                    и за повече информация може да ни зададете въпрос във формата за контакт или на посочените имейл и телефон,
+                    както и да ни откриете на картата.
+                </p>
             </div>
 
             <div class="row contact-info">
@@ -292,7 +295,7 @@
         </div>
 
         <div class="container mb-4">
-            <iframe src="https://www.google.com/maps/embed/v1/place?q=42.6621927,23.3151003&key=@Configuration["GoogleApiKey"]" width="100%" height="380" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <iframe src="https://www.google.com/maps/embed/v1/place?q=42.6621927,23.3151003&key=@Configuration[" GoogleApiKey"]"></iframe>
         </div>
 
         <div class="container">
