--- a/src/Web/LearningPlusWebApp/Views/Shared/_Layout.cshtml
+++ b/src/Web/LearningPlusWebApp/Views/Shared/_Layout.cshtml
@@ -15,8 +15,6 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800|Montserrat:300,400,700" rel="stylesheet">
 
-    <!-- Bootstrap CSS File -->
-    @*<link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">*@
 
     <!-- Libraries CSS Files -->
     <link href="/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
@@ -33,13 +31,13 @@
     @Html.Raw(JavaScriptSnippet.FullScript)
 </head>
 
-<body class="pt-0">
+<body>
 
     <!--==========================
       Top Bar
     ============================-->
     <section class="topbar">
-        <div class="container clearfix">
+        <div class="wrapper">
             <div class="contact-info float-left">
                 <i class="fa fa-envelope-o"></i> <a href="mailto:svetleto_gb@abv.bg">svetleto_gb@abv.bg</a>
                 <i class="fa fa-phone"></i> 0883 48-35-09
